[tool.poetry]
name = "car-wash-booking"
version = "0.1.0"
description = "\"Приложение для бронирования автомойки\""
authors = ["Nurbek878 <nurik878878@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "car_wash_booking"}]

[tool.poetry.dependencies]
python = "3.9.19"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
